--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
     "react": "16.13.1",
+    "react-devtools": "^4.10.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
@@ -38,6 +39,8 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
+    "redux-devtools": "^3.7.0",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "~4.0.0"
   },
   "private": true
