--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
+    "docz:serve": "docz build && docz serve",
+    "test": "jest"
   },
   "dependencies": {
     "@expo-google-fonts/bangers": "^0.1.0",
@@ -40,9 +44,13 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.16",
+    "detox": "^18.7.1",
+    "jest": "^26.6.3",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "name": "shop-app",
+  "version": "0.0.1"
 }
