--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/react-redux": "^7.1.16",
     "detox": "^18.7.1",
     "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
     "redux-devtools": "^3.7.0",
     "redux-devtools-extension": "^2.13.8",
     "typescript": "~4.0.0"
