--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "moment": "^2.29.1",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "16.13.1",
     "react-devtools": "^4.10.1",
     "react-dom": "16.13.1",
